# prelegal

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  catalog.json  docker-compose.yml
backend/: pyproject.toml
backend/prelegal/: dependencies.py  main.py
backend/prelegal/core/: config.py  database.py  security.py
backend/prelegal/models/: chat.py  document.py  document_fields.py
backend/prelegal/routers/: auth.py  chat.py  documents.py
backend/prelegal/services/: auth_service.py  chat_service.py  document_service.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AuthModal.tsx  DocumentSelector.tsx  GenericPreview.tsx  NdaChat.tsx  NdaForm.tsx  NdaPreview.tsx  SignaturePad.tsx  SignatureSection.tsx
frontend/contexts/: AuthContext.tsx
frontend/types/: catalog.ts  chat.ts  nda.ts
frontend/utils/: exportPdf.ts
scripts/: start-linux.sh  start-windows.ps1  stop-mac.sh  stop-windows.ps1
templates/: LICENSE.txt
